--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: flutter_battery_optimization
-description: A new flutter plugin project.
+description: A simple plugin to stop battery optimization usage in Android.
 version: 0.0.1
-author:
-homepage:
+author: haloinformatics
+homepage: https://github.com/haloinformatics/flutter_battery_optimization
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
