--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ flutter:
   # be modified. They are used by the tooling to maintain consistency when
   # adding or updating assets for this project.
   plugin:
-    androidPackage: com.example.flutter_battery_optimization
+    androidPackage: com.haloinformatics.flutter_battery_optimization
     pluginClass: FlutterBatteryOptimizationPlugin
 
   # To add assets to your plugin package, add an assets section, like this:
